[package]
name = "reclaim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.59", features = ["derive", "env"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
